--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div class="card">
     <h2>Contact Support</h2>
-    <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    <p>Email: <a href="mailto:wozgod@163.com">wozgod@163.com</a></p>
     <p>Response time: within 3 business days.</p>
   </div>
 
